--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,8 @@ body{
     background: #000;
     display: flex;
     justify-content: center;
-    
+    height: 45vmax;
+    align-items: center;
 }
 
 h2{
